--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,35 +1,19 @@
+// .vscode/launch.json
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Launch Egg",
       "type": "node",
       "request": "launch",
-      "name": "Egg Debug",
+      "cwd": "${workspaceRoot}",
       "runtimeExecutable": "npm",
-      "runtimeArgs": [
-        "run",
-        "dev",
-        "--",
-        "--inspect-brk"
-      ],
+      "windows": { "runtimeExecutable": "npm.cmd" },
+      "runtimeArgs": [ "run", "debug" ],
       "console": "integratedTerminal",
+      "protocol": "auto",
       "restart": true,
-      "autoAttachChildProcesses": true
-    },
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Egg Test",
-      "runtimeExecutable": "npm",
-      "runtimeArgs": [
-        "run",
-        "test:local",
-        "--",
-        "--inspect-brk"
-      ],
+      "port": 9229,
       "autoAttachChildProcesses": true
     }
   ]
