--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "egg": "^3.17.5",
     "egg-orm": "^2.4.1",
+    "egg-router-plus": "^2.0.0",
     "egg-scripts": "2",
     "mysql": "^2.18.1"
   },
@@ -25,6 +26,7 @@
     "start": "egg-scripts start --daemon --title=egg-server-demo-server",
     "stop": "egg-scripts stop --title=egg-server-demo-server",
     "dev": "egg-bin dev",
+    "debug": "egg-bin debug",
     "test": "npm run lint -- --fix && npm run test:local",
     "test:local": "egg-bin test",
     "cov": "egg-bin cov",
