--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "egg": "^3.17.5",
+    "egg-cors": "^3.0.1",
     "egg-jwt": "^3.1.7",
     "egg-orm": "^2.4.1",
     "egg-router-plus": "^2.0.0",
