--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "egg-cors": "^3.0.1",
     "egg-jwt": "^3.1.7",
     "egg-orm": "^2.4.1",
+    "egg-redis": "^2.6.0",
     "egg-router-plus": "^2.0.0",
     "egg-scripts": "2",
     "mysql": "^2.18.1",
