--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node": ">=18.0.0"
   },
   "scripts": {
+    "start:prod": "egg-scripts start --env=prod --daemon --title=egg-server-demo-server",
     "start": "egg-scripts start --daemon --title=egg-server-demo-server",
     "stop": "egg-scripts stop --title=egg-server-demo-server",
     "restart": "npm run stop && npm run start",
